[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycytotrace-bio"
version = "0.1.0"
description = "Pure-Python port of CytoTRACE — gene-count-based stemness pseudotime (Gulati et al. Science 2020)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Zehua Zeng", email = "starlitnightly@163.com" }]
keywords = ["single-cell", "scRNA-seq", "stemness", "pseudotime", "cytotrace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["numpy>=1.23", "scipy>=1.10", "pandas>=1.5"]

[project.optional-dependencies]
plot = ["ggplot2-python>=4.0"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/omicverse/py-CytoTRACE"
Repository = "https://github.com/omicverse/py-CytoTRACE"
"Upstream R package" = "https://github.com/gunsagargulati/CytoTRACE"

[tool.setuptools.packages.find]
include = ["pycytotrace*"]
exclude = ["tests*", "examples*", "cytotrace-ref*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::RuntimeWarning"]
